--- a/style.css
+++ b/style.css
@@ -1,16 +1,44 @@
 #label {
-    position: absolute;
+    position: fixed;
     top: 40%;
     left: 70%;
     transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.7);
-    color: #fff;
+    background-color: rgba(255, 255, 255, 0.2); /* Use white color with reduced opacity */
+    color: #000; /* Text color */
     padding: 10px 20px;
-    border-radius: 5px;
-    pointer-events: none;
+    border-radius: 10px; /* Increased border-radius for a smoother effect */
+    backdrop-filter: blur(100px); /* Apply a blur effect to create the glassmorphic effect */
+    border: 1px solid rgba(0, 0, 0); /* Add a subtle border */
     transition: opacity 0.3s ease;
+    font-size: 2rem;
 }
 
 .hidden {
     opacity: 0;
+}
+
+body {
+    margin: 0;
+    overflow: hidden;
+    position: relative;
+}
+
+#container {
+    position: absolute;
+}
+
+#overlay {
+    position: absolute;
+    transition: opacity 0.3s ease;
+}
+
+#popup{
+    position: fixed;
+    transition: opacity 0.3s ease;
+    width: 100%;
+    background-color: black;
+    height: 5%;
+    bottom: 0;
+    color: #FFF; /* Text color */
+    font-size: 2rem;
 }
