--- a/style.css
+++ b/style.css
@@ -15,20 +15,29 @@ body {
 
 #popup{
     position: fixed;
-    transition: opacity 1s ease;
+    transition: opacity 0.7s ease;
     width: 100%;
-    background-color: black;
-    height: 5%;
+    background-color: red;
+    height: 40px;
     bottom: 0;
     color: #FFF; /* Text color */
     font-size: 2rem;
 }
 
-[id="cursor"] {
+#introduction{
+    position: fixed;
+    transition: opacity 0.7s ease;
+    bottom: 20px;
+    left: 20px;
+    color: #FFF;
+    font-size: 2rem;
+}
+
+#cursor {
     position: absolute;
-    width: 28px;
-    height: 28px;
-    background-color: #9370db;
+    width: 20px;
+    height: 20px;
+    background-color: white;
     border-radius: 50%;
-    border: 2px solid #0f0;
+    border: 3px solid black;
 }
