--- a/style.css
+++ b/style.css
@@ -42,18 +42,15 @@ body {
     border: 3px solid black;
 }
 
-#projects, #about, #skills, #contact, #certs, #education{
+#projects, #about, #skills, #contact, #certs, #info{
     position: fixed;
     transition: opacity 0.7s ease;
     background: rgba(255, 255, 255, 0.25); /* Adjust alpha for transparency */
     backdrop-filter: blur(10px); /* Adjust the blur effect */
     height: 100vh;
-    text-align: center;
-    font-size: 4rem;
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 /*#projects p, #aboutme p, #skills p, #contact p, #certificates p, #education p{*/
